cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_1.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cbc_cksm.c:23: error: DEAD_STORE
  The value written to &iv (type unsigned char const *) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cbc_cksm.c:23:5: Write of unused value
21.   
22.       c2l(iv, tout0);
23.       c2l(iv, tout1);
          ^
24.       for (; l > 0; l -= 8) {
25.           if (l >= 8) {
